sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On RETURN shift to state 50
-- On PRINT shift to state 54
-- On IF shift to state 59
-- On ID shift to state 7
-- On FOR shift to state 64
-- On DEF shift to state 181
-- On variavel shift to state 76
-- On programa shift to state 198
-- On parametro shift to state 111
-- On list(instrucao) shift to state 199
-- On instrucao shift to state 201
-- On funcao shift to state 203
-- On comando_while shift to state 127
-- On comando_se shift to state 128
-- On comando_retorno shift to state 129
-- On comando_print shift to state 130
-- On comando_instancia shift to state 131
-- On comando_input_declara shift to state 132
-- On comando_input shift to state 133
-- On comando_for_dec shift to state 134
-- On comando_for shift to state 135
-- On comando_declara shift to state 136
-- On comando_chamada shift to state 137
-- On comando_atribuicao_sub shift to state 138
-- On comando_atribuicao_mult shift to state 139
-- On comando_atribuicao_mod shift to state 140
-- On comando_atribuicao_mais shift to state 141
-- On comando_atribuicao_div shift to state 142
-- On comando_atribuicao shift to state 143
-- On comando shift to state 204
-- On chamada shift to state 146
-- On EOF reduce production list(instrucao) -> 

State 1:
comando_while -> WHILE . expressao DPTOS NOVALINHA INDENTA comandos DEDENTA [ WHILE RETURN PRINT IF ID FOR EOF DEF DEDENTA ]
-- On LITSTRING shift to state 2
-- On LITINT shift to state 3
-- On LITFLOAT shift to state 4
-- On LITCHAR shift to state 5
-- On LITBOOL shift to state 6
-- On ID shift to state 7
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 46
-- On chamada shift to state 17

State 2:
expressao -> LITSTRING . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On SUB reduce production expressao -> LITSTRING 
-- On OULOG reduce production expressao -> LITSTRING 
-- On NOVALINHA reduce production expressao -> LITSTRING 
-- On MULT reduce production expressao -> LITSTRING 
-- On MOD reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On ELOG reduce production expressao -> LITSTRING 
-- On DPTOS reduce production expressao -> LITSTRING 
-- On DIV reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 3:
expressao -> LITINT . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On SUB reduce production expressao -> LITINT 
-- On OULOG reduce production expressao -> LITINT 
-- On NOVALINHA reduce production expressao -> LITINT 
-- On MULT reduce production expressao -> LITINT 
-- On MOD reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On ELOG reduce production expressao -> LITINT 
-- On DPTOS reduce production expressao -> LITINT 
-- On DIV reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 4:
expressao -> LITFLOAT . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITFLOAT 
-- On SUB reduce production expressao -> LITFLOAT 
-- On OULOG reduce production expressao -> LITFLOAT 
-- On NOVALINHA reduce production expressao -> LITFLOAT 
-- On MULT reduce production expressao -> LITFLOAT 
-- On MOD reduce production expressao -> LITFLOAT 
-- On MENORIGUAL reduce production expressao -> LITFLOAT 
-- On MENOR reduce production expressao -> LITFLOAT 
-- On MAIS reduce production expressao -> LITFLOAT 
-- On MAIORIGUAL reduce production expressao -> LITFLOAT 
-- On MAIOR reduce production expressao -> LITFLOAT 
-- On IGUAL reduce production expressao -> LITFLOAT 
-- On FPAR reduce production expressao -> LITFLOAT 
-- On ELOG reduce production expressao -> LITFLOAT 
-- On DPTOS reduce production expressao -> LITFLOAT 
-- On DIV reduce production expressao -> LITFLOAT 
-- On DIFERENTE reduce production expressao -> LITFLOAT 

State 5:
expressao -> LITCHAR . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITCHAR 
-- On SUB reduce production expressao -> LITCHAR 
-- On OULOG reduce production expressao -> LITCHAR 
-- On NOVALINHA reduce production expressao -> LITCHAR 
-- On MULT reduce production expressao -> LITCHAR 
-- On MOD reduce production expressao -> LITCHAR 
-- On MENORIGUAL reduce production expressao -> LITCHAR 
-- On MENOR reduce production expressao -> LITCHAR 
-- On MAIS reduce production expressao -> LITCHAR 
-- On MAIORIGUAL reduce production expressao -> LITCHAR 
-- On MAIOR reduce production expressao -> LITCHAR 
-- On IGUAL reduce production expressao -> LITCHAR 
-- On FPAR reduce production expressao -> LITCHAR 
-- On ELOG reduce production expressao -> LITCHAR 
-- On DPTOS reduce production expressao -> LITCHAR 
-- On DIV reduce production expressao -> LITCHAR 
-- On DIFERENTE reduce production expressao -> LITCHAR 

State 6:
expressao -> LITBOOL . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITBOOL 
-- On SUB reduce production expressao -> LITBOOL 
-- On OULOG reduce production expressao -> LITBOOL 
-- On NOVALINHA reduce production expressao -> LITBOOL 
-- On MULT reduce production expressao -> LITBOOL 
-- On MOD reduce production expressao -> LITBOOL 
-- On MENORIGUAL reduce production expressao -> LITBOOL 
-- On MENOR reduce production expressao -> LITBOOL 
-- On MAIS reduce production expressao -> LITBOOL 
-- On MAIORIGUAL reduce production expressao -> LITBOOL 
-- On MAIOR reduce production expressao -> LITBOOL 
-- On IGUAL reduce production expressao -> LITBOOL 
-- On FPAR reduce production expressao -> LITBOOL 
-- On ELOG reduce production expressao -> LITBOOL 
-- On DPTOS reduce production expressao -> LITBOOL 
-- On DIV reduce production expressao -> LITBOOL 
-- On DIFERENTE reduce production expressao -> LITBOOL 

State 7:
variavel -> ID . [ VIRG SUBIGUAL SUB SOMAIGUAL OULOG NOVALINHA MULTIGUAL MULT MODIGUAL MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUAL FPAR ELOG DPTOS DIVIGUAL DIV DIFERENTE ATRIB APAR ]
-- On VIRG reduce production variavel -> ID 
-- On SUBIGUAL reduce production variavel -> ID 
-- On SUB reduce production variavel -> ID 
-- On SOMAIGUAL reduce production variavel -> ID 
-- On OULOG reduce production variavel -> ID 
-- On NOVALINHA reduce production variavel -> ID 
-- On MULTIGUAL reduce production variavel -> ID 
-- On MULT reduce production variavel -> ID 
-- On MODIGUAL reduce production variavel -> ID 
-- On MOD reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IN reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On ELOG reduce production variavel -> ID 
-- On DPTOS reduce production variavel -> ID 
-- On DIVIGUAL reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On APAR reduce production variavel -> ID 

State 8:
expressao -> APAR . expressao FPAR [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On LITSTRING shift to state 2
-- On LITINT shift to state 3
-- On LITFLOAT shift to state 4
-- On LITCHAR shift to state 5
-- On LITBOOL shift to state 6
-- On ID shift to state 7
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 44
-- On chamada shift to state 17

State 9:
chamada -> variavel . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> variavel . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On APAR shift to state 10
-- On VIRG reduce production expressao -> variavel 
-- On SUB reduce production expressao -> variavel 
-- On OULOG reduce production expressao -> variavel 
-- On NOVALINHA reduce production expressao -> variavel 
-- On MULT reduce production expressao -> variavel 
-- On MOD reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On ELOG reduce production expressao -> variavel 
-- On DPTOS reduce production expressao -> variavel 
-- On DIV reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 

State 10:
chamada -> variavel APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On LITSTRING shift to state 2
-- On LITINT shift to state 3
-- On LITFLOAT shift to state 4
-- On LITCHAR shift to state 5
-- On LITBOOL shift to state 6
-- On ID shift to state 7
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On separated_nonempty_list(VIRG,expressao) shift to state 11
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 12
-- On expressao shift to state 14
-- On chamada shift to state 17
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 

State 11:
loption(separated_nonempty_list(VIRG,expressao)) -> separated_nonempty_list(VIRG,expressao) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> separated_nonempty_list(VIRG,expressao) 

State 12:
chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) . FPAR [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On FPAR shift to state 13

State 13:
chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On SUB reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On OULOG reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On NOVALINHA reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MULT reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MOD reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MENORIGUAL reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MENOR reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MAIS reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MAIORIGUAL reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On MAIOR reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On IGUAL reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On FPAR reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On ELOG reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On DPTOS reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On DIV reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 
-- On DIFERENTE reduce production chamada -> variavel APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR 

State 14:
expressao -> expressao . ELOG expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . OULOG expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIS expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . SUB expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MULT expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIV expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MOD expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG SUB OULOG MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
separated_nonempty_list(VIRG,expressao) -> expressao . [ FPAR ]
separated_nonempty_list(VIRG,expressao) -> expressao . VIRG separated_nonempty_list(VIRG,expressao) [ FPAR ]
-- On VIRG shift to state 15
-- On SUB shift to state 18
-- On OULOG shift to state 26
-- On MULT shift to state 20
-- On MOD shift to state 22
-- On MENORIGUAL shift to state 28
-- On MENOR shift to state 34
-- On MAIS shift to state 30
-- On MAIORIGUAL shift to state 32
-- On MAIOR shift to state 36
-- On IGUAL shift to state 38
-- On ELOG shift to state 42
-- On DIV shift to state 24
-- On DIFERENTE shift to state 40
-- On FPAR reduce production separated_nonempty_list(VIRG,expressao) -> expressao 

State 15:
separated_nonempty_list(VIRG,expressao) -> expressao VIRG . separated_nonempty_list(VIRG,expressao) [ FPAR ]
-- On LITSTRING shift to state 2
-- On LITINT shift to state 3
-- On LITFLOAT shift to state 4
-- On LITCHAR shift to state 5
-- On LITBOOL shift to state 6
-- On ID shift to state 7
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On separated_nonempty_list(VIRG,expressao) shift to state 16
-- On expressao shift to state 14
-- On chamada shift to state 17

State 16:
separated_nonempty_list(VIRG,expressao) -> expressao VIRG separated_nonempty_list(VIRG,expressao) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRG,expressao) -> expressao VIRG separated_nonempty_list(VIRG,expressao) 

State 17:
expressao -> chamada . [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> chamada 
-- On SUB reduce production expressao -> chamada 
-- On OULOG reduce production expressao -> chamada 
-- On NOVALINHA reduce production expressao -> chamada 
-- On MULT reduce production expressao -> chamada 
-- On MOD reduce production expressao -> chamada 
-- On MENORIGUAL reduce production expressao -> chamada 
-- On MENOR reduce production expressao -> chamada 
-- On MAIS reduce production expressao -> chamada 
-- On MAIORIGUAL reduce production expressao -> chamada 
-- On MAIOR reduce production expressao -> chamada 
-- On IGUAL reduce production expressao -> chamada 
-- On FPAR reduce production expressao -> chamada 
-- On ELOG reduce production expressao -> chamada 
-- On DPTOS reduce production expressao -> chamada 
-- On DIV reduce production expressao -> chamada 
-- On DIFERENTE reduce production expressao -> chamada 

State 18:
expressao -> expressao SUB . expressao [ VIRG SUB OULOG NOVALINHA MULT MOD MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On LITSTRING shift to state 2
-- On LITINT shift to state 3
-- On LITFLOAT shift to state 4
-- On LITCHAR shift to state 5
-- On LITBOOL shift to state 6
-- On ID shift to state 7
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 19
-- On chamada shift to state 17
